--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,7 @@ Homepage: https://corenominal.org/projects/rocket-menu/
 
 Package: rocket-menu
 Architecture: all
-Depends: ${shlibs:Depends}, ${misc:Depends}, python, gir1.2-appindicator3-0.1, gir1.2-gtk-3.0, gir1.2-pango-1.0, gir1.2-notify-0.7, python-gi, ubuntu-desktop, unity
+Depends: ${shlibs:Depends}, ${misc:Depends}, python, python-webob, gir1.2-appindicator3-0.1, gir1.2-gtk-3.0, gir1.2-pango-1.0, gir1.2-notify-0.7, python-gi, ubuntu-desktop, unity
 Description: Quick launch panel menu for Ubuntu Unity.
  An application indicator menu for quick access to files, 
  folders, web addresses and remote file servers.
